--- a/.github/workflows/checkmarx.yml
+++ b/.github/workflows/checkmarx.yml
@@ -17,6 +17,6 @@ jobs:
           project_name: ME_NodeGoat
           cx_tenant: ama-partners
           base_uri: https://ind.iam.checkmarx.net/ 
-          cx_client_id: ME123_CxOne_Client
-          cx_client_secret: BQHNkrH9QleEGjTuwdAv8hoJNrFFO6Pm
+          cx_client_id: Test_ME
+          cx_client_secret: bTq6YclgMP5tHAFzeQfgzs2tt7hwW9Ym
 
